[package]
name = "cloubil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cloubil"
path = "src/main.rs"

[dependencies]
# http-related
reqwest = { version = "0.11", features = ["blocking", "json"] }

# cryptography
sha2 = "0.10.6"
hmac = "0.12.1"

# encoding and decoding hexadecimal
hex = "0.3.1"
hex-literal = "0.3.4"

# working with dates
chrono = "0.4.23"

# working with JSON
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

# figuring out paths on the OS 
dirs = "4.0.0"

# parsing command line arguments 
clap = { version = "4.0.32", features = ["derive"] }